--- a/DailyNews-MVVMTutorial/Base.lproj/Main.storyboard
+++ b/DailyNews-MVVMTutorial/Base.lproj/Main.storyboard
@@ -69,21 +69,64 @@
             </objects>
             <point key="canvasLocation" x="800.00000000000011" y="76.339285714285708"/>
         </scene>
-        <!--View Controller-->
+        <!--Detail View Controller-->
         <scene sceneID="ZwO-4u-aNM">
             <objects>
-                <viewController id="7aa-Wg-xR8" sceneMemberID="viewController">
+                <viewController id="7aa-Wg-xR8" customClass="DetailViewController" customModule="DailyNews_MVVMTutorial" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="F3o-s3-5p6">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMg-8j-ab1">
+                                <rect key="frame" x="35" y="251" width="47" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="light" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Haberi okumak için tıklayın" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZeD-Dx-gpS">
+                                <rect key="frame" x="106" y="586" width="203" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Vry-pe-rxL">
+                                <rect key="frame" x="54" y="344" width="307" height="183"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GoG-7v-ls0">
+                                <rect key="frame" x="35" y="182" width="74" height="37"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="UZz-mm-sk6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="aMg-8j-ab1" firstAttribute="top" secondItem="GoG-7v-ls0" secondAttribute="bottom" constant="32" id="84G-DR-XCy"/>
+                            <constraint firstItem="UZz-mm-sk6" firstAttribute="trailing" secondItem="aMg-8j-ab1" secondAttribute="trailing" constant="332" id="CDs-9Z-CnU"/>
+                            <constraint firstItem="ZeD-Dx-gpS" firstAttribute="leading" secondItem="UZz-mm-sk6" secondAttribute="leading" constant="106" id="HH5-9X-iQ4"/>
+                            <constraint firstItem="Vry-pe-rxL" firstAttribute="leading" secondItem="UZz-mm-sk6" secondAttribute="leading" constant="54" id="HTR-Qp-s0e"/>
+                            <constraint firstItem="ZeD-Dx-gpS" firstAttribute="top" secondItem="Vry-pe-rxL" secondAttribute="bottom" constant="59" id="Hbr-Jq-V5k"/>
+                            <constraint firstItem="UZz-mm-sk6" firstAttribute="trailing" secondItem="ZeD-Dx-gpS" secondAttribute="trailing" constant="105" id="IHL-5B-WDj"/>
+                            <constraint firstItem="GoG-7v-ls0" firstAttribute="top" secondItem="UZz-mm-sk6" secondAttribute="top" constant="42" id="TJD-Tz-Eg2"/>
+                            <constraint firstItem="aMg-8j-ab1" firstAttribute="leading" secondItem="UZz-mm-sk6" secondAttribute="leading" constant="35" id="dcz-W1-2Hm"/>
+                            <constraint firstItem="UZz-mm-sk6" firstAttribute="bottom" secondItem="ZeD-Dx-gpS" secondAttribute="bottom" constant="255" id="hnz-zB-imG"/>
+                            <constraint firstItem="UZz-mm-sk6" firstAttribute="trailing" secondItem="Vry-pe-rxL" secondAttribute="trailing" constant="53" id="oAw-d9-LiW"/>
+                            <constraint firstItem="UZz-mm-sk6" firstAttribute="trailing" secondItem="GoG-7v-ls0" secondAttribute="trailing" constant="305" id="rUF-eU-TA5"/>
+                            <constraint firstItem="GoG-7v-ls0" firstAttribute="leading" secondItem="UZz-mm-sk6" secondAttribute="leading" constant="35" id="s3J-rZ-sl6"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="sRm-I5-UJN"/>
+                    <connections>
+                        <outlet property="authorLabel" destination="GoG-7v-ls0" id="A5Y-BV-4eS"/>
+                        <outlet property="image" destination="Vry-pe-rxL" id="imH-io-xKz"/>
+                        <outlet property="publishedLabel" destination="aMg-8j-ab1" id="q2t-dh-kY3"/>
+                        <outlet property="urlLabel" destination="ZeD-Dx-gpS" id="xr6-Gt-kjq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oTk-xG-i6W" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1597" y="76"/>
+            <point key="canvasLocation" x="1595.6521739130435" y="75.669642857142847"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="6JZ-Va-wrA">
